<resources>
    <string name="app_name">Android Simple Views</string>
    <string name="editPorofile">Edit Porofile</string>
    <string name="done">Done</string>
    <string name="viewWebsite">View website</string>
    <string name="androidDevelopment">ANdroid Development</string>
    <string name="uiDesign">Ui Dising</string>
    <string name="deepLearning">Deep Learning</string>
    <string name="skills">Skills</string>
    <string name="provinceCity">Province, City</string>
    <string name="gilanRasht">Gilan, Rasht</string>
    <string name="tehran">Tehran, Tehran</string>
    <string name="alborzKaraj">Alborz, Karaj</string>
    <string name="saveInformation">Save Information</string>
    <string name="Edit_porofil_hint">Enter your fullname here...</string>
</resources>