<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <Button
        android:id="@+id/btn_main_savinf"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:text="@string/saveInformation"
       android:layout_alignParentBottom="true" />
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_above="@id/btn_main_savinf">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_main_editporofil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/backgrond_button_primmery"
            android:text="@string/editPorofile"
            app:layout_constraintEnd_toStartOf="@+id/btn_main_viewwebsite"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_main_fullname" />

        <Button
            android:id="@+id/btn_main_viewwebsite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:background="@drawable/bakgurand_button_secondary"
            android:text="@string/viewWebsite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn_main_editporofil"
            app:layout_constraintTop_toTopOf="@+id/btn_main_editporofil" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="54dp"
            android:layout_height="54dp"
            android:layout_marginTop="64dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/download" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="68dp"
            android:text="@string/skills"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/btn_main_editporofil" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="24dp" />

        <CheckBox
            android:id="@+id/checkBox_main_android"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/androidDevelopment"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <CheckBox
            android:id="@+id/checkBox2_main_ui"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/uiDesign"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/checkBox_main_android" />

        <CheckBox
            android:id="@+id/checkBox3_main_deep"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/deepLearning"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/checkBox2_main_ui" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/provinceCity"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/checkBox3_main_deep" />

        <RadioGroup
            android:id="@+id/RadioGorup_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/textView2" >

            <RadioButton
                android:id="@+id/radioButton_main_tehran"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/tehran" />

            <RadioButton
                android:id="@+id/radioButton_main_alborz"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alborzKaraj" />

            <RadioButton
                android:id="@+id/radioButton_main_gilan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gilanRasht" />
    </RadioGroup>

        <TextView
            android:id="@+id/tv_main_fullname"
            android:layout_width="71dp"
            android:layout_height="22dp"
            android:layout_marginTop="8dp"
            android:minHeight="48dp"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.468"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            tools:text="TextView" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>


</RelativeLayout>